# file-findr

./: CMakeLists.txt  LICENSE  README.md  findr.cpp  findr.h
demo_files/: passwd  passwords.txt
matchers/: email.json
